35 cross compile openeo geotrellis to scala 213 (#60)
* chore: bump scala version to 2.13.16
# https://github.com/Open-EO/openeo-geotrellis-kubernetes/issues/35